--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@
 *.exe
 *.out
 *.app
+
+.vscode
+dest.txt
+main(masyvai).cpp
+*.txt
+ObjektinioProgramavimo_uzd.code-workspace
+program.iss
+./Setup
+Setup
+latex
